JEKT-215: Schema Correction

--- a/src/datasets/MD_MATL_LOC/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_LOC/pbt_aspects.yml
@@ -9,847 +9,903 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: NSDM_V_MARC_MATNR
+  - name: MATL_NUM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: NSDM_V_MARC_WERKS
+  - name: PLNT_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: AWSLS
+  - name: VAR_CNTL_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: KAUTB
+  - name: AUTO_PO_IND
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PRCTR
+  - name: PRCTR_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: KORDB
+  - name: SRC_LIST_IND
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: LADGR
+  - name: LD_GRP_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SSQSS
+  - name: QUAL_MGMT_CNTL_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: MINBE
+  - name: REORDR_QTY
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: LOSGR
+  - name: COST_LOT_SIZE_VAL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SERNP
+  - name: SERIZATION_PRFL_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: MMSTA
+  - name: SPEC_MATL_PLNT_STS_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: MMSTD
+  - name: SPEC_MATL_PLNT_STS_DTTM
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DEL_IND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LOT_SIZE_VAL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_PLNR_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PRDTN_SUPR_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PRDTN_UOM_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_ABC_CLSN_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: LVORM
+  - name: AVLBLTY_CHK_IND
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DISLS
+  - name: SFTY_TIME_IND
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DISPO
+  - name: SPL_PRCMT_TYPE_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: FEVOR
+  - name: PRCMT_TYPE_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: FRTME
+  - name: MRP_TYPE_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: MAABC
+  - name: ORIG_CTRY_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: MTVFP
+  - name: PLNG_STRTGY_GRP_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SHFLG
+  - name: RD_VAL_QTY
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SOBSL
+  - name: LOT_SIZE_FX_QTY
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: BESKZ
+  - name: GOOD_RCPT_LEAD_DAYS_QTY
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DISMM
+  - name: LOT_SIZE_MAX_QTY
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: HERKL
+  - name: LOT_SIZE_MIN_QTY
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: STRGR
+  - name: SFTY_STK_QTY
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: BSTRF
+  - name: PLNG_TIME_FENCE_DAYS_CNT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: BSTFE
+  - name: MAX_STK_LVL_QTY
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: WEBAZ
+  - name: SFTY_TIME_DAYS_CNT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: BSTMA
+  - name: PLAN_DELV_DAYS_CNT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: BSTMI
+  - name: SCRAP_PCT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: EISBE
+  - name: INHS_PRDTN_DAYS_CNT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: FXHOR
+  - name: MIN_SFTY_STK_QTY
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: MABST
+  - name: BKWRD_CNSMPTN_DAYS_CNT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SHZET
+  - name: FRWD_CNSMPTN_DAYS_CNT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PLIFZ
+  - name: CNSMPTN_MODE_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: AUSSS
+  - name: PRCHSNG_GRP_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DZEIT
+  - name: MMS_FIN_CLSN_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: EISLO
+  - name: VMI_IND
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: VINT1
+  - name: MSTR_PLNG_FMLY_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: VINT2
+  - name: ENTR_SPEC_MATL_PLNT_STS_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: VRMOD
+  - name: ENTR_PRCMT_TYPE_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: EKGRP
+  - name: MATL_HAZ_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: BWTTY
+  - name: VALUT_CAT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: XCHAR
+  - name: BTCH_MGMT_IN_INTRNL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DISPR
+  - name: MRP_PRFL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PERKZ
+  - name: PER_IN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SBDKZ
+  - name: DEPN_REQ_IN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: LAGPR
+  - name: STRG_COST_PCT_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: KZAUS
+  - name: DSCNT_IN
     type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: EFF_OUT_DTTM
+    type: timestamp
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: AUSDT
+  - name: FLLP_MATL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: NFMAT
+  - name: RQR_GRP_IN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: KZBED
+  - name: MIX_MRP_IN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: MISKZ
+  - name: BASE_QTY
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: BASMG
+  - name: MAX_STRG_PER
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: MAXLZ
+  - name: UNIT_FOR_MAX_STRG
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: LZEIH
+  - name: OVR_DELV_TLRNC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: UEETO
+  - name: UNLTD_OVER_DELV_IN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: UEETK
+  - name: UND_DELV_TLRNC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: UNETO
+  - name: TOT_REPLN_LT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: WZEIT
+  - name: INSP_STK
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: INSMK
+  - name: BTCH_MGMT_PLNT_IN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: XCHPF
+  - name: FISC_YR_VRNT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PERIV
+  - name: CMMDTY_CD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: STAWN
+  - name: RGN_OF_ORIG_OF_MATL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: HERKR
+  - name: CMMDTY_CD_UOM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: EXPME
+  - name: REP_MFG_IN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SAUFT
+  - name: VERS_IN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: VERKZ
+  - name: ALT_BOM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: STLAL
+  - name: BOM_USG
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: STLAN
+  - name: KEY_TASK_LIST
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PLNNR
+  - name: GRP_CNTR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: APLAL
+  - name: ISS_STRG_LOC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: LGPRO
+  - name: MRP_GRP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DISGR
+  - name: CMPNT_SCRAP_PCT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: KAUSF
+  - name: CERT_TYPE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: QZGTP
+  - name: INSP_SETUP_FOR_MATL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: QMATV
+  - name: PHY_INV_CC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABCIN
+  - name: CONFIG_MATL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: STDPD
+  - name: REP_MFG_PRFL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SFEPR
+  - name: NEG_STK_PLNT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: XMCNG
+  - name: PLNG_CYC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: RDPRF
+  - name: CO_PROD_IN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: KZKUP
+  - name: BULK_MATL_IN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SCHGT
+  - name: FIX_CC_IN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CCFIX
+  - name: PROD_SCHDLNG_PRFL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SFCPF
+  - name: CUR_PER
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: LFMON
+  - name: INSP_INTV
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PRFRQ
+  - name: DOC_REQ_IN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: KZDKZ
+  - name: MATL_FRGHT_GRP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: MFRGR
+  - name: MATL_AUTH_QM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: QMATA
+  - name: CNTL_CODE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: STEUC
+  - name: UNIT_OF_ISS
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: AUSME
+  - name: ALT_BOM_METH
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ALTSL
+  - name: SCHDLNG_MRGN_KEY
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: FHORI
+  - name: EXPT_IMPT_GRP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: MTVER
+  - name: BACKFLUSH_IN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: RGEKZ
+  - name: MM_DFLT_SUPP_AREA
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: VSPVB
+  - name: BTCH_ENT_PO
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: KZECH
+  - name: ORIG_BATCH_MGMT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: UCHKZ
+  - name: MATL_CFOP_CAT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: INDUS
+  - name: STRG_LOC_EXTRNL_PRCMT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: LGFSB
+  - name: STK_DTRMN_GRP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: EPRIO
+  - name: DO_NOT_COST_IN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: NCOST
+  - name: SPL_PRCMT_TYPE_COST
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SOBSK
+  - name: CVGE_PRFL_RNG
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PRENO
+  - name: EXPT_CERT_NUM
     type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: EXPT_CERT_DTTM
+    type: timestamp
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PREND
+  - name: ORIG_BATCH_REF_MATL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: UCMAT
+  - name: RESET_FCST_MDL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: AUTRU
+  - name: SRVC_LVL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: LGRAD
+  - name: ACT_PUSH
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ1_ACTIVATE_PUSH_PLT
+  - name: MTS_MTO_FL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ1_MTS_MTO_FLAG_PLT
+  - name: CNSMPTN_MODE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ1_CONSUMPTION_MODE_PLT
+  - name: DUAL_SRCNG_WIP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ1_DUAL_SRC_WIP_PROJ_PLT
+  - name: MATL_STS_DESC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: MTSTB
+  - name: MATL_PLNR_NM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: TXT
+  - name: PRDTN_SUPR_NM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: EKNAM
+  - name: PRCHSNG_GRP_DESC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: EXCISE_TAX_RLVNCE
+  - name: EXCSE_TAX_RLVNCE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ1_SEQUENCE_NUMBER_PLT
+  - name: SEQ_NUM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PSTAT
+  - name: MAINT_STS
     type: string
     nullable: true
     metadata:
