JEKT-215: Datatypes corrected

--- a/src/datasets/MD_MATL_LOC/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_LOC/pbt_aspects.yml
@@ -66,14 +66,14 @@ schema:
       mappings: []
       tags: []
   - name: REORDR_QTY
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: COST_LOT_SIZE_VAL
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -192,42 +192,42 @@ schema:
       mappings: []
       tags: []
   - name: RD_VAL_QTY
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: LOT_SIZE_FX_QTY
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: GOOD_RCPT_LEAD_DAYS_QTY
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: LOT_SIZE_MAX_QTY
-    type: string
+    type: decimal(22,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: LOT_SIZE_MIN_QTY
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SFTY_STK_QTY
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -241,7 +241,7 @@ schema:
       mappings: []
       tags: []
   - name: MAX_STK_LVL_QTY
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -255,42 +255,42 @@ schema:
       mappings: []
       tags: []
   - name: PLAN_DELV_DAYS_CNT
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SCRAP_PCT
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: INHS_PRDTN_DAYS_CNT
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: MIN_SFTY_STK_QTY
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: BKWRD_CNSMPTN_DAYS_CNT
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: FRWD_CNSMPTN_DAYS_CNT
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -430,14 +430,14 @@ schema:
       mappings: []
       tags: []
   - name: BASE_QTY
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: MAX_STRG_PER
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -451,7 +451,7 @@ schema:
       mappings: []
       tags: []
   - name: OVR_DELV_TLRNC
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -465,14 +465,14 @@ schema:
       mappings: []
       tags: []
   - name: UND_DELV_TLRNC
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: TOT_REPLN_LT
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -577,7 +577,7 @@ schema:
       mappings: []
       tags: []
   - name: CMPNT_SCRAP_PCT
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -632,6 +632,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: RD_PRFL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: CO_PROD_IN
     type: string
     nullable: true
@@ -668,7 +675,7 @@ schema:
       mappings: []
       tags: []
   - name: INSP_INTV
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -829,7 +836,7 @@ schema:
       mappings: []
       tags: []
   - name: SRVC_LVL
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
