JEKT-215: Ready for Unit Testing

--- a/src/datasets/MD_MATL_LOC/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_LOC/pbt_aspects.yml
@@ -668,7 +668,7 @@ schema:
       mappings: []
       tags: []
   - name: CUR_PER
-    type: string
+    type: integer
     nullable: true
     metadata:
       description: ''
