Testing custom pipeline

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -41,6 +41,20 @@ pipelines:
       - datasets/STRCT_MD_MATL_VALUT
       - datasets/STRCT_MD_MATL_VALUT_HIST
     dependencies: {}
+  pipelines/PPLN_BTCH_1:
+    name: PPLN_BTCH_1
+    description: Create the tables & structures associated with PPLN_BTCH_1
+    author: skostadi@its.jnj.com
+    mode: batch
+    language: python
+    createdAt: '2023-03-21 17:29:57'
+    modifiedAt: '2023-03-21 19:14:13'
+    datasets:
+      inputs: []
+      outputs:
+      - datasets/STRCT_MD_TCKG_DATA_HDR
+      - datasets/STRCT_MD_TCKG_DATA_ITM
+    dependencies: {}
   pipelines/TBL_STRCT_MD_TRACKING_DATA:
     name: TBL_STRCT_MD_TRACKING_DATA
     description: Create the tables & structures associated with MD_TRACKING_DATA
